--- a/package.json
+++ b/package.json
@@ -9,23 +9,17 @@
 
     "repository": {
       "type": "git",
-      "url": "git+https://git.codificar.com.br/react-components/react-native-chat"
+      "url": "git+https://github.com/salusou/react-native-chat"
     },
 
     "dependencies": {
       "react-native-gifted-chat": "^0.16.3",
       "react-native-status-bar-height": "^2.5.0"
     },
-    
+
     "peerDependencies": {
         "react-native": ">=0.47.0"
     },
 
-    "author": "Codificar",
-
-    "bugs": {
-      "url": "https://git.codificar.com.br/react-components/react-native-chat/issues"
-    },
-
-    "homepage": "https://git.codificar.com.br/react-components/react-native-chat#readme"
+    "author": "Genesisoft"
   }
