--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
-    "name": "react-native-chat",
-    "version": "1.0.0",
-    "description": "A component for chat",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "license": "MIT",
-
-    "repository": {
-      "type": "git",
-      "url": "git+https://github.com/salusou/react-native-chat"
-    },
-
-    "dependencies": {
-      "react-native-gifted-chat": "^0.16.3",
-      "react-native-status-bar-height": "^2.5.0"
-    },
-
-    "peerDependencies": {
-        "react-native": ">=0.47.0"
-    },
-
-    "author": "Genesisoft"
-  }
+  "name": "@evibe/react-native-chat",
+  "version": "1.0.1",
+  "description": "A component for chat",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/salusou/react-native-chat.git"
+  },
+  "dependencies": {
+    "react-native-gifted-chat": "^0.16.3",
+    "react-native-status-bar-height": "^2.5.0"
+  },
+  "peerDependencies": {
+    "react-native": ">=0.47.0"
+  },
+  "author": "Genesisoft",
+  "bugs": {
+    "url": "https://github.com/salusou/react-native-chat/issues"
+  },
+  "homepage": "https://github.com/salusou/react-native-chat#readme",
+  "main": "navigation.js",
+  "devDependencies": {},
+  "keywords": [
+    "chat",
+    "sockets",
+    "evibe"
+  ]
+}
