--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "url": "git+https://github.com/salusou/react-native-chat.git"
   },
   "dependencies": {
+    "react": "^18.2.0",
     "react-native-gifted-chat": "^0.16.3",
-    "react-native-status-bar-height": "^2.5.0"
+    "react-native-status-bar-height": "^2.5.0",
+    "react-navigation": "^4.4.4"
   },
   "peerDependencies": {
     "react-native": ">=0.47.0"
@@ -23,7 +25,6 @@
   },
   "homepage": "https://github.com/salusou/react-native-chat#readme",
   "main": "navigation.js",
-  "devDependencies": {},
   "keywords": [
     "chat",
     "sockets",
